[package]
name = "rust_hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.1"
serde = { version = "1", features = ["derive"] }

chacha20 = "0.9"
rand = "0.9"
base64 = "0.13"
hex = "0.4"

[[bin]]
name = "encChaCha20"
path = "src/encChaCha20.rs"