[package]
name = "rust_hello"
version = "0.1.0"
edition = "2021"
default-run = "rust_hello"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chacha20 = "0.9"
rand = "0.9"
base64 = "0.22"
hex = "0.4"
pico-args = "0.5"

[[bin]]
name = "encChaCha20"
path = "src/encChaCha20.rs"

[[bin]]
name = "pargs"
path = "src/pargs.rs"